Time: 1 ms (70.76%), Space: 43.9 MB (6.62%) - LeetHub